# ChangeLog for net-im/qwit
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 May 2009; Sergio D. Rodriguez Inclan (ZeRoX) <srinclan@gmail.com>
  qwit-0.8.ebuild:
  Fixed dodoc typo.

  27 May 2009; Sergio D. Rodriguez Inclan (ZeRoX) <srinclan@gmail.com>
  -qwit-0.6.ebuild, +qwit-0.8.ebuild:
  Version bump for qwit.

  20 Apr 2009; Christian Ruppert <idl0r@gentoo.org> qwit-0.6.ebuild:
  Removed x11-libs/qt:4 meta package dependency.

  19 Jan 2009; Christian Ruppert (idl0r) <spooky85@gmail.com>
  qwit-0.6.ebuild:
  Add suggested RDEPEND=${DEPEND}.

  10 Dec 2008; Sergio D. Rodríguez Inclan (ZeRoX) <srinclan@gmail.com>
  +qwit-0.6.ebuild, +metadata.xml:
  New ebuild for bug 250562. Thanks to Scarabeus and Tommy.
