@@ -1,4 +1,6 @@
 DIST qwit-0.8-src.tar.bz2 42450 RMD160 e6e7713c7c0c7bc882808b553826f7a2433f4236 SHA1 ff61c9f776f5986a72fc5e675f738cb8b170c7cc SHA256 ea67546039afdd6811dbce40010cc8c01dcc62e9fd7e512dbef071c2c17f9bde
+DIST qwit-1.0-beta-src.tar.bz2 151933 RMD160 a06684479aa5e590d1250dc14e286822d92bf3e0 SHA1 7b6a2d432ee2a852284a57ee76f88cbed5fee48f SHA256 b7475e6469bce02a7d1fb2d8172ad8791357c0a6711c8e27f880b48912ef89cc
 EBUILD qwit-0.8.ebuild 600 RMD160 875ee121c37e5435c692bdc556cc1a6110667312 SHA1 48111f3cc8b1189da452ba9f0edeef75875f777a SHA256 511de737033a4fdba6b82d28c5903aa867749dfd5170d9819f66e5069cc4cab7
-MISC ChangeLog 762 RMD160 03f75b13f5cc80383cbc65c6543f4be3311050c3 SHA1 71d1a53e4e2f9fbac1e203c8963f082ac567d086 SHA256 cc8efdc787ec4303d62da4d3967d2fac373b1cd8b80a9071ac72885fcab454f9
+EBUILD qwit-1.0_beta.ebuild 463 RMD160 4835596f33011c361054f6d3ec390b0851e8c665 SHA1 5f0470ec71c1d1db958677b4b15dcedb1809c7af SHA256 2738ee1a8b57e3427b5cdb663686ec3f2bd6ca0df785607689ae99643713e96d
+MISC ChangeLog 888 RMD160 805a10a8c1f57faffa531701386d4558387601ae SHA1 c32a2bcdf9fb978bfc81c5aa0c9c2ded810a5c7a SHA256 571bd55bb1668556a3a70cc48e44ab4d6566017c8ab2c2bf7516709025f07f3a
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
