@@ -1,6 +1,10 @@
 # ChangeLog for net-im/qwit
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  15 Mar 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
+  +qwit-1.0_beta.ebuild:
+  Version bump of qwit
 
   27 May 2009; Sergio D. Rodriguez Inclan (ZeRoX) <srinclan@gmail.com>
   qwit-0.8.ebuild:
